--- a/lab02/taub-bio.html
+++ b/lab02/taub-bio.html
@@ -11,8 +11,8 @@
             <h2>Personal Information</h2>
             <p>Furthermore, a defining part of my journey is living with dyslexia, a learning disability that has shaped my perspective on life. Overcoming the challenges associated with dyslexia has taught me the importance of self-advocacy and advocating for others. My learning disability has demonstrated to me the importance of using my voice to advocate for those who may feel unheard and has guided my academic and career choices. </p>
         <hr>
-        &copy;
-        <h3>Favoriate Season</h3>
+        <h3>&copy;</h3>
+        <h4>Favoriate Season</h4>
         <ol>
             <li>Summer</li>
             <li>Winter</li>
